# face_detection

./: README.md
final/: Dockerfile  fa_blurred.avi  meson.build
final/source/code/: c.cpp  c.h  meson.build
